--- a/ZXVenture.BackendChallenge.ApiTests/ZXVenture.BackendChallenge.ApiTests.csproj
+++ b/ZXVenture.BackendChallenge.ApiTests/ZXVenture.BackendChallenge.ApiTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ZXVenture.BackendChallenge.Api\ZXVenture.BackendChallenge.Api.csproj" />
+    <ProjectReference Include="..\ZXVenture.BackendChallenge.Api\ZXVentures.BackendChallenge.Api.csproj" />
   </ItemGroup>
 
 </Project>
